Issue #18765: changed the width of the input fields in the groupboxes to a percentage value to avoid overlap of the scrollbar.

--- a/source/less/screen.less
+++ b/source/less/screen.less
@@ -551,6 +551,9 @@ body {
   &.panel {
       min-width: 330px;
   }
+	.onyx-input-decorator > input {
+    width: 80%;
+  }
 }
 
 .xv-groupbox.in-panel > *:first-child {
